Extract desktop-dependet customisation to a separate module.

--- a/sventimir-xmonad-config.cabal
+++ b/sventimir-xmonad-config.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.34.4.
+-- This file has been generated from package.yaml by hpack version 0.35.1.
 --
 -- see: https://github.com/sol/hpack
 
@@ -43,6 +43,7 @@ library
 executable xmonad-exe
   main-is: Main.hs
   other-modules:
+      Custom
       Paths_sventimir_xmonad_config
   hs-source-dirs:
       app
