Update build config.

--- a/sventimir-xmonad-config.cabal
+++ b/sventimir-xmonad-config.cabal
@@ -1,6 +1,6 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.35.1.
+-- This file has been generated from package.yaml by hpack version 0.35.2.
 --
 -- see: https://github.com/sol/hpack
 
@@ -37,6 +37,7 @@ library
     , libmpd
     , process
     , unix
+    , xmobar
     , xmonad
     , xmonad-contrib
   default-language: Haskell2010
@@ -58,6 +59,7 @@ executable xmonad-exe
     , process
     , sventimir-xmonad-config
     , unix
+    , xmobar
     , xmonad
     , xmonad-contrib
   default-language: Haskell2010
